src/main/java/com/example/AntiFraudSystem/errors/CardNumberNotValid.java
package com.example.AntiFraudSystem.errors;

public class CardNumberNotValid extends RuntimeException{

    public CardNumberNotValid(String message) {
        super(message);
    }
}
